--- a/css/index.css
+++ b/css/index.css
@@ -82,11 +82,9 @@ h1, h2, h3, h4, h5 {
 .container nav a {
     padding: 15px;
     color: gray;
+    text-decoration: none;
 }
 
-.img {
-    margin: 30px;
-}
 
 .cta {
     margin-top: 30px;
@@ -99,10 +97,11 @@ h1, h2, h3, h4, h5 {
     font-size: 65px;
     margin: 15px;
     padding: 65px;
+    text-align: center;
 }
 
 .cta .cta-text button {
-    margin-left: 85px;
+    margin-left: 150px;
     background-color: white;
     border: 1px solid black;
     width: 110px;
@@ -152,6 +151,7 @@ h1, h2, h3, h4, h5 {
 
 footer {
     margin-top: 25px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: center;
 }
@@ -197,8 +197,6 @@ footer {
 
 @media (max-width: 800px) {
     .middle-img {
-        justify-content: center;
-        align-items: center;
         width: 95%;
     }
 }
@@ -218,20 +216,21 @@ footer {
     }
 }
 
+
 @media (max-width: 500px) {
     .container nav {
         flex-direction: column;
         width: 45%;
         padding: 15px;
         font-size: 20px;
+        padding: 10px;
     }
 }
 
 @media (max-width: 500px) {
     .container nav a {
-        margin: 10px;
-        padding: 10px;
-        text-decoration: none;
+        display: flex;
+        flex-direction: column;
 
     }
 }
